<resources>
    <string name="app_name">1D_ShoppingCart_Ryan</string>

    //Shopping Cart
    <string name="shopping_cart">Shopping Cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>

    //Checkout
    <string name="check_out_title">Delivery Information</string>
    <string name="edit_address">Edit Address</string>
    <string name="checkout">Checkout</string>
    <string name="address">Edit Address</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="place_order">Place Order</string>
    <string name="return_shopping_cart">Return to Shopping Cart</string>
    <string name="return_checkout">Return to Checkout Page</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="checkout_label">Checkout</string>
    <string name="select_timing_label">Checkout</string>

    //Select Timing
    <string name="set_time">Confirm Timing</string>
</resources>